this might fix footer being pushed out of viewport [3:45pm]

--- a/components/FamilyTreeComponents/GameIntro/GameIntro.module.scss
+++ b/components/FamilyTreeComponents/GameIntro/GameIntro.module.scss
@@ -5,9 +5,13 @@
     min-width: 300px;
 }
 
-@media only screen and (max-width: 300px) {
+@media only screen and (max-width: 400px) {
     #blackjack {
-        min-height: 200px;
-        min-width: 200px;
+        min-height: 150px;
+        min-width: 150px;
+
+        // pushes footer out of view on mobile
+        // min-height: 200px;
+        // min-width: 200px;
     }    
 }
